syntax = "proto3";

option java_multiple_files = true;
option java_package = "hengda.billboard";
option java_outer_classname = "FeedbackProto";

package feedback;

service Feedback {

  rpc insert(FeedbackRequest) returns (FeedbackReply) {}

  rpc list(FeedbackRequest) returns (FeedbackReply) {}

}

message FeedbackRequest { string data = 1; }

message FeedbackReply { string data = 1; }
